--- a/GIF Test.ipynb
+++ b/GIF Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "02939b56",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "7410fc5f",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "ba53745a",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "3138a464",
    "metadata": {},
    "outputs": [
@@ -71,12 +71,12 @@
    ],
    "source": [
     "model = TestModel()\n",
-    "trainer = pl.Trainer(accelerator='gpu', devices=1)"
+    "trainer = pl.Trainer(accelerator='gpu', devices=1, max_epochs=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "fbc5f23a",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6d2a3d1725f4c768f92d7212fdce611",
+       "model_id": "96742bfcc74f49b580944216b0f25149",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,22 +104,22 @@
    ],
    "source": [
     "results = trainer.predict(model, datamodule=dm)\n",
-    "data = dm.aglomerate(results)"
+    "data = dm.agglomerate(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "667be6ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([450, 50, 50, 1])"
+       "torch.Size([450, 50, 50])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,20 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "dc63698c",
    "metadata": {},
    "outputs": [],
    "source": [
     "@gif.frame\n",
     "def plot(i):\n",
-    "    plt.imshow(data[i,:,:,channel], vmin=-1, vmax=1, origin='lower')\n",
+    "    plt.imshow(data[i,:,:], vmin=-1, vmax=1, origin='lower')\n",
     "    plt.colorbar(location='top')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "487a0484",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d778b035",
+   "id": "99977c54",
    "metadata": {},
    "outputs": [],
    "source": []
