--- a/Checkpoint.ipynb
+++ b/Checkpoint.ipynb
@@ -44,15 +44,15 @@
    "source": [
     "dm = GridDataModule(data_dir='data/ignition_square',\n",
     "                    dimension=2,\n",
-    "                    batch_size=1,\n",
-    "                    size=250,\n",
-    "                    stride=250,\n",
-    "                    flatten=False,\n",
+    "                    batch_size=512,\n",
+    "                    size=50,\n",
+    "                    stride=25,\n",
+    "                    flatten=True,\n",
     "                    channels=[1])\n",
     "\n",
-    "trainer = pl.Trainer(accelerator='gpu', devices=1, logger=True)\n",
+    "trainer = pl.Trainer(accelerator='gpu', devices=1, logger=False)\n",
     "\n",
-    "path = 'lightning_logs/blanca_ignition_cnn_full_4/checkpoints/epoch=4880-step=112263.ckpt'\n",
+    "path = 'lightning_logs/ignition_qcnn_full_1/checkpoints/epoch=272-step=19383.ckpt'\n",
     "model = AutoEncoder.load_from_checkpoint(path, input_shape=dm.get_shape())"
    ]
   },
@@ -72,7 +72,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1585e289025b47de9510597128da2701",
+       "model_id": "e1473150cfe240af9217c9389ebd2634",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,7 +90,7 @@
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "       Test metric             DataLoader 0\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "     test_err_epoch         0.02072989195585251\n",
+      "     test_err_epoch         0.9666374325752258\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
      ]
     }
@@ -122,7 +122,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "eb7b1531",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -134,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcd5aaca9c4040a9848986043cf96071",
+       "model_id": "327553cb51c9423f807edac4671893d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,10 +146,68 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (25) must match the size of tensor b (50) at non-singleton dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m pred \u001b[38;5;241m=\u001b[39m trainer\u001b[38;5;241m.\u001b[39mpredict(model\u001b[38;5;241m=\u001b[39mmodel, datamodule\u001b[38;5;241m=\u001b[39mdm)\n\u001b[1;32m      2\u001b[0m dm\u001b[38;5;241m.\u001b[39mdata_shape \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m50\u001b[39m,\u001b[38;5;241m50\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m pred \u001b[38;5;241m=\u001b[39m \u001b[43mdm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43magglomerate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Research/ASCR-Compression/QuadConv/core/data.py:242\u001b[0m, in \u001b[0;36mGridDataModule.agglomerate\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m    239\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_tiles, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_tiles, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize)\n\u001b[1;32m    241\u001b[0m \u001b[38;5;66;03m#create mask\u001b[39;00m\n\u001b[0;32m--> 242\u001b[0m mask \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_stitch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mones\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum_tiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum_tiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    244\u001b[0m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[1;32m    245\u001b[0m quilt \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_stitch(data)\n",
+      "File \u001b[0;32m~/Documents/Research/ASCR-Compression/QuadConv/core/data.py:227\u001b[0m, in \u001b[0;36mGridDataModule._stitch\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m    225\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_tiles):\n\u001b[1;32m    226\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_tiles):\n\u001b[0;32m--> 227\u001b[0m             processed[i,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstride\u001b[38;5;241m*\u001b[39mj:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstride\u001b[38;5;241m*\u001b[39mj\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstride\u001b[38;5;241m*\u001b[39mk:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstride\u001b[38;5;241m*\u001b[39mk\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m data[i,j,k,:,:]\n\u001b[1;32m    229\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m processed\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (25) must match the size of tensor b (50) at non-singleton dimension 1"
+     ]
     }
    ],
    "source": [
-    "pred = trainer.predict(model=model, datamodule=dm)\n",
+    "pred = trainer.predict(model=model, datamodule=dm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e21c7e03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([512, 1, 2500])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "905ddf49",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (25) must match the size of tensor b (50) at non-singleton dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m dm\u001b[38;5;241m.\u001b[39mdata_shape \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m50\u001b[39m,\u001b[38;5;241m50\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m pred \u001b[38;5;241m=\u001b[39m \u001b[43mdm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43magglomerate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Research/ASCR-Compression/QuadConv/core/data.py:242\u001b[0m, in \u001b[0;36mGridDataModule.agglomerate\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m    239\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_tiles, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_tiles, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize)\n\u001b[1;32m    241\u001b[0m \u001b[38;5;66;03m#create mask\u001b[39;00m\n\u001b[0;32m--> 242\u001b[0m mask \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_stitch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mones\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum_tiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum_tiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    244\u001b[0m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[1;32m    245\u001b[0m quilt \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_stitch(data)\n",
+      "File \u001b[0;32m~/Documents/Research/ASCR-Compression/QuadConv/core/data.py:227\u001b[0m, in \u001b[0;36mGridDataModule._stitch\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m    225\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_tiles):\n\u001b[1;32m    226\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_tiles):\n\u001b[0;32m--> 227\u001b[0m             processed[i,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstride\u001b[38;5;241m*\u001b[39mj:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstride\u001b[38;5;241m*\u001b[39mj\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstride\u001b[38;5;241m*\u001b[39mk:\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstride\u001b[38;5;241m*\u001b[39mk\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m data[i,j,k,:,:]\n\u001b[1;32m    229\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m processed\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (25) must match the size of tensor b (50) at non-singleton dimension 1"
+     ]
+    }
+   ],
+   "source": [
+    "dm.data_shape = [50,50]\n",
     "pred = dm.agglomerate(pred)"
    ]
   },
@@ -161,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "91539601",
    "metadata": {},
    "outputs": [],
@@ -191,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "5846a28a",
    "metadata": {},
    "outputs": [],
@@ -209,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e0e29022",
    "metadata": {},
    "outputs": [],
    "source": [
     "block = [i for i in range(0, 250)]\n",
     "frames = [plot(i) for i in block]    \n",
-    "gif.save(frames, f'error_spike_{block[0]}_{block[-1]}.gif', duration=100)"
+    "gif.save(frames, f'train.gif', duration=100)"
    ]
   },
   {
