--- a/Checkpoint.ipynb
+++ b/Checkpoint.ipynb
@@ -42,11 +42,11 @@
     }
    ],
    "source": [
-    "dm = GridDataModule(data_dir='data/ignition_square',\n",
+    "dm = GridDataModule(data_dir='data/ignition_center_cut',\n",
     "                    dimension=2,\n",
     "                    batch_size=512,\n",
     "                    size=50,\n",
-    "                    stride=25,\n",
+    "                    stride=50,\n",
     "                    flatten=True,\n",
     "                    channels=[1])\n",
     "\n",
