Got the point-voxel network running.

--- a/notebooks/Checkpoint.ipynb
+++ b/notebooks/Checkpoint.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "45bc2ecb",
    "metadata": {},
    "outputs": [],
@@ -18,13 +18,13 @@
     "import torch\n",
     "import pytorch_lightning as pl\n",
     "import numpy as np\n",
-    "from core.data import GridDataModule\n",
-    "from core.model import AutoEncoder"
+    "from core.mesh_data import DataModule\n",
+    "from core.VCAE.model import Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "6e43ceb3",
    "metadata": {},
    "outputs": [
@@ -32,9 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/rs-coop/anaconda3/envs/compression/lib/python3.9/site-packages/pytorch_lightning/loops/utilities.py:91: PossibleUserWarning: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
-      "  rank_zero_warn(\n",
-      "GPU available: True, used: True\n",
+      "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n"
@@ -42,23 +40,29 @@
     }
    ],
    "source": [
-    "dm = GridDataModule(data_dir='data/ignition_center_cut',\n",
-    "                    dimension=2,\n",
-    "                    batch_size=512,\n",
-    "                    size=50,\n",
-    "                    stride=50,\n",
-    "                    flatten=True,\n",
-    "                    channels=[1])\n",
+    "dm = DataModule(data_dir='../data/ignition_mesh',\n",
+    "                spatial_dim=2,\n",
+    "                num_points=9074,\n",
+    "                batch_size=128,\n",
+    "                channels=[1])\n",
     "\n",
     "trainer = pl.Trainer(accelerator='gpu', devices=1, logger=False)\n",
     "\n",
-    "path = 'lightning_logs/ignition_qcnn_full_1/checkpoints/epoch=272-step=19383.ckpt'\n",
-    "model = AutoEncoder.load_from_checkpoint(path, input_shape=dm.get_shape())"
+    "conv_params = {\"in_channels\":[1,16],\n",
+    "                \"out_channels\":[16,16],\n",
+    "                \"kernel_size\":[3],\n",
+    "                \"bias\":[False],\n",
+    "                \"padding\": [\"same\"]}\n",
+    "\n",
+    "path = 'ignition/vcae_pool/version_0/checkpoints/epoch=3627.ckpt'\n",
+    "model = Model.load_from_checkpoint('../lightning_logs/'+path,\n",
+    "                                  data_info=dm.get_data_info(),\n",
+    "                                  conv_params=conv_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "1d14bf8b",
    "metadata": {},
    "outputs": [
@@ -72,7 +76,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1473150cfe240af9217c9389ebd2634",
+       "model_id": "0954ebf8794e4df98dfb0539a8b65414",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,7 +94,8 @@
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "       Test metric             DataLoader 0\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "     test_err_epoch         0.9666374325752258\n",
+      "      test_avg_err          0.05885091423988342\n",
+      "      test_max_err          0.10330650210380554\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
      ]
     }
