Changing around the PVCAE to see if I can reduce the parameter count and still get good results.

--- a/notebooks/Checkpoint.ipynb
+++ b/notebooks/Checkpoint.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "45bc2ecb",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,12 @@
     "import pytorch_lightning as pl\n",
     "import numpy as np\n",
     "from core.mesh_data import DataModule\n",
-    "from core.PVCAE.model import Model"
+    "from core.PAE.model import Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "6e43ceb3",
    "metadata": {},
    "outputs": [
@@ -48,24 +48,24 @@
     "\n",
     "trainer = pl.Trainer(accelerator='gpu', devices=1, logger=False)\n",
     "\n",
-    "conv_params = {\"in_channels\":[1,8],\n",
-    "                \"out_channels\":[8,8],\n",
-    "                \"kernel_size\":[3],\n",
-    "                \"bias\":[False],\n",
-    "                \"padding\": [\"same\"]}\n",
-    "# params = {\"in_channels\":[1,16],\n",
-    "#             \"out_channels\":[16,16],\n",
-    "#             \"bias\":[False]}\n",
+    "# conv_params = {\"in_channels\":[1,8],\n",
+    "#                 \"out_channels\":[8,8],\n",
+    "#                 \"kernel_size\":[3],\n",
+    "#                 \"bias\":[False],\n",
+    "#                 \"padding\": [\"same\"]}\n",
+    "params = {\"in_channels\":[1,8],\n",
+    "            \"out_channels\":[8,8],\n",
+    "            \"bias\":[False]}\n",
     "\n",
-    "path = 'ignition/pvcae_pool/version_0/checkpoints/epoch=7279.ckpt'\n",
+    "path = 'ignition/pae/version_0/checkpoints/epoch=8061.ckpt'\n",
     "model = Model.load_from_checkpoint('../lightning_logs/'+path,\n",
     "                                  data_info=dm.get_data_info(),\n",
-    "                                  conv_params=conv_params)"
+    "                                  params=params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "1d14bf8b",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d13bd3f119594298b04b2ad87365cadd",
+       "model_id": "54862946322746ccba6bf825223ed83b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,8 +97,8 @@
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "       Test metric             DataLoader 0\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "      test_avg_err         0.005812082905322313\n",
-      "      test_max_err          0.09165585786104202\n",
+      "      test_avg_err         0.014588515274226665\n",
+      "      test_max_err          0.6489652395248413\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
      ]
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "9b871601",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "eb7b1531",
    "metadata": {
     "scrolled": true
@@ -144,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42ecb26fce2c4d1d804dbe48bf1b0999",
+       "model_id": "de72be4895be4065af3dd0522712950e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "e21c7e03",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "torch.Size([128, 1, 9074])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "905ddf49",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "5846a28a",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "e0e29022",
    "metadata": {},
    "outputs": [],
