--- a/notebooks/Checkpoint.ipynb
+++ b/notebooks/Checkpoint.ipynb
@@ -19,7 +19,7 @@
     "import pytorch_lightning as pl\n",
     "import numpy as np\n",
     "from core.mesh_data import DataModule\n",
-    "from core.PAE.model import Model"
+    "from core.PVCAE.model import Model"
    ]
   },
   {
@@ -48,19 +48,20 @@
     "\n",
     "trainer = pl.Trainer(accelerator='gpu', devices=1, logger=False)\n",
     "\n",
-    "# conv_params = {\"in_channels\":[1,8],\n",
-    "#                 \"out_channels\":[8,8],\n",
-    "#                 \"kernel_size\":[3],\n",
-    "#                 \"bias\":[False],\n",
-    "#                 \"padding\": [\"same\"]}\n",
-    "params = {\"in_channels\":[1,8],\n",
-    "            \"out_channels\":[8,8],\n",
+    "conv_params = {\"in_channels\":[1,8],\n",
+    "                \"out_channels\":[8,16],\n",
+    "                \"kernel_size\":[3],\n",
+    "                \"bias\":[False],\n",
+    "                \"padding\": [\"same\"]}\n",
+    "point_params = {\"in_channels\":[1,2],\n",
+    "            \"out_channels\":[2,2],\n",
     "            \"bias\":[False]}\n",
     "\n",
-    "path = 'ignition/pae/version_0/checkpoints/epoch=8061.ckpt'\n",
+    "path = 'ignition/pvcae/version_1/checkpoints/epoch=13989.ckpt'\n",
     "model = Model.load_from_checkpoint('../lightning_logs/'+path,\n",
     "                                  data_info=dm.get_data_info(),\n",
-    "                                  params=params)"
+    "                                  conv_params=conv_params,\n",
+    "                                  point_params=point_params)"
    ]
   },
   {
@@ -79,7 +80,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54862946322746ccba6bf825223ed83b",
+       "model_id": "eafcaf68065340de982a5ce89b129ef5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,8 +98,8 @@
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "       Test metric             DataLoader 0\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "      test_avg_err         0.014588515274226665\n",
-      "      test_max_err          0.6489652395248413\n",
+      "      test_avg_err         0.008702492341399193\n",
+      "      test_max_err          0.19548900425434113\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
      ]
     }
@@ -144,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de72be4895be4065af3dd0522712950e",
+       "model_id": "f8ce43343d534c67ba4f96552b974965",
        "version_major": 2,
        "version_minor": 0
       },
