update loading method

--- a/notebooks/paper_figures_ignition_grid_cnn.ipynb
+++ b/notebooks/paper_figures_ignition_grid_cnn.ipynb
@@ -15,18 +15,9 @@
     "import yaml\n",
     "import matplotlib.ticker as tickerd\n",
     "import matplotlib.colors as colors\n",
+    "from core.utils import load_checkpoint\n",
     "\n",
-    "from matplotlib.tri import Triangulation as triang"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from core.autoencoder import AutoEncoder\n",
-    "from core.structured_data import GridDataModule\n",
+    "from matplotlib.tri import Triangulation as triang\n",
     "\n",
     "import seaborn\n",
     "\n",
@@ -35,135 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kevin\\Google Drive\\Research\\QuadConv\\lightning_logs\\ignition_maxskip_cnn\\lassen_version_0\\checkpoints\n",
-      "Loading experiment ignition_maxskip_cnn and C:\\Users\\Kevin\\Google Drive\\Research\\QuadConv\\lightning_logs\\ignition_maxskip_cnn\\lassen_version_0\\checkpoints\\epoch=13837.ckpt \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "AutoEncoder(\n",
-       "  (loss_fn): SobolevLoss()\n",
-       "  (output_activation): Tanh()\n",
-       "  (encoder): Encoder(\n",
-       "    (activation1): CELU(alpha=1.0)\n",
-       "    (activation2): CELU(alpha=1.0)\n",
-       "    (cnn): Sequential(\n",
-       "      (0): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=same, bias=False)\n",
-       "      (1): PoolConvBlock(\n",
-       "        (resample): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "        (conv1): Conv2d(16, 16, kernel_size=(3, 3), stride=(1, 1), padding=same)\n",
-       "        (norm1): InstanceNorm2d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation1): CELU(alpha=1.0)\n",
-       "        (conv2): Conv2d(16, 16, kernel_size=(3, 3), stride=(1, 1), padding=same)\n",
-       "        (norm2): InstanceNorm2d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation2): CELU(alpha=1.0)\n",
-       "      )\n",
-       "    )\n",
-       "    (flat): Flatten(start_dim=1, end_dim=-1)\n",
-       "    (linear): Sequential(\n",
-       "      (0): ParametrizedLinear(\n",
-       "        in_features=10000, out_features=50, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (1): CELU(alpha=1.0)\n",
-       "      (2): ParametrizedLinear(\n",
-       "        in_features=50, out_features=50, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (3): CELU(alpha=1.0)\n",
-       "    )\n",
-       "  )\n",
-       "  (decoder): Decoder(\n",
-       "    (activation1): CELU(alpha=1.0)\n",
-       "    (activation2): CELU(alpha=1.0)\n",
-       "    (unflat): Unflatten(dim=1, unflattened_size=torch.Size([16, 25, 25]))\n",
-       "    (linear): Sequential(\n",
-       "      (0): ParametrizedLinear(\n",
-       "        in_features=50, out_features=50, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (1): CELU(alpha=1.0)\n",
-       "      (2): ParametrizedLinear(\n",
-       "        in_features=50, out_features=10000, bias=True\n",
-       "        (parametrizations): ModuleDict(\n",
-       "          (weight): ParametrizationList(\n",
-       "            (0): _SpectralNorm()\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (3): CELU(alpha=1.0)\n",
-       "    )\n",
-       "    (cnn): Sequential(\n",
-       "      (0): PoolConvBlock(\n",
-       "        (resample): Upsample(scale_factor=2.0, mode=nearest)\n",
-       "        (conv1): Conv2d(16, 16, kernel_size=(3, 3), stride=(1, 1), padding=same)\n",
-       "        (norm1): InstanceNorm2d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation1): CELU(alpha=1.0)\n",
-       "        (conv2): Conv2d(16, 16, kernel_size=(3, 3), stride=(1, 1), padding=same)\n",
-       "        (norm2): InstanceNorm2d(16, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False)\n",
-       "        (activation2): CELU(alpha=1.0)\n",
-       "      )\n",
-       "      (1): Conv2d(16, 1, kernel_size=(3, 3), stride=(1, 1), padding=same, bias=False)\n",
-       "    )\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#### Change the entries here to analyze a new model / dataset\n",
-    "experiment_name = 'ignition_maxskip_cnn'\n",
-    "model_checkpoint_path = Path('C:\\\\Users\\\\Kevin\\\\Google Drive\\\\Research\\\\QuadConv\\\\lightning_logs\\\\ignition_maxskip_cnn\\\\lassen_version_0') / 'checkpoints'\n",
-    "input_shape = (1,1,50,50)\n",
-    "###################\n",
-    "\n",
-    "checkpoint = list(model_checkpoint_path.glob('epoch=*.ckpt'))\n",
-    "\n",
-    "print(model_checkpoint_path)\n",
-    "\n",
-    "print(f'Loading experiment {experiment_name} and {checkpoint[0]} ')\n",
-    "\n",
-    "experiment_path = Path('../experiments/')\n",
-    "model_yml = list(experiment_path.rglob(experiment_name + '*'))\n",
-    "\n",
-    "with model_yml[0].open() as file:\n",
-    "    config = yaml.safe_load(file)\n",
-    "\n",
-    "config['data']['data_dir'] = 'C:\\\\Users\\\\Kevin\\\\Google Drive\\\\Research\\\\QuadConv\\\\data\\\\ignition_center_cut'\n",
-    "\n",
-    "data_module = GridDataModule(**config['data'])\n",
-    "data_module.setup(stage='analyze')\n",
-    "dataset = data_module.analyze_data()\n",
-    "\n",
-    "#TODO Make a dataloader option that outputs 1 experiments worth of data\n",
-    "\n",
-    "model = AutoEncoder.load_from_checkpoint(checkpoint[0], input_shape=input_shape, **config['model'])\n",
-    "model.eval()\n",
-    "model.to('cpu')"
+    "model_checkpoint_path = Path('C:\\\\Users\\\\Kevin\\\\Google Drive\\\\Research\\\\QuadConv\\\\lightning_logs\\\\ignition_maxskip_cnn\\\\lassen_version_0')\n",
+    "data_path = Path('C:\\\\Users\\\\Kevin\\\\Google Drive\\\\Research\\\\QuadConv\\\\data\\\\ignition_center_cut')\n",
+    "model, dataset = load_checkpoint(model_checkpoint_path, data_path)"
    ]
   },
   {
@@ -471,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:50:36) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
