--- a/notebooks/paper_figures_ignition_grid_qcnn.ipynb
+++ b/notebooks/paper_figures_ignition_grid_qcnn.ipynb
@@ -34,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_checkpoint_path = Path('C:\\\\Users\\\\Kevin\\\\OneDrive - UCB-O365\\\\Documents\\\\Research\\\\QuadConv\\\\lightning_logs\\\\ignition_grid\\\\paper\\\\qcae_pool_learn_weights\\\\version_2')\n",
+    "model_checkpoint_path = Path('C:\\\\Users\\\\Kevin\\\\OneDrive - UCB-O365\\\\Documents\\\\Research\\\\QuadConv\\\\lightning_logs\\\\ignition_grid\\\\paper\\\\qcae_pool\\\\version_1')\n",
     "data_path = Path('C:\\\\Users\\\\Kevin\\\\OneDrive - UCB-O365\\\\Documents\\\\Research\\\\QuadConv\\\\data\\\\ignition_grid')\n",
     "model, dataset = load_checkpoint(model_checkpoint_path, data_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1038435\n",
+      "1035310\n",
       "(1, 2)\n",
-      "tensor(0.0141)\n",
+      "tensor(0.0137)\n",
       "torch.Size([450, 1, 2500])\n",
       "torch.Size([450])\n"
      ]
